https://issues.apache.org/jira/browse/OPENEJB-2073 no more non-final parameters and local variables
git-svn-id: https://svn.apache.org/repos/asf/tomee/tomee/trunk@1569795 13f79535-47bb-0310-9956-ffa450edef68